   linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
   etc are performed. Thus the peices of CDR can be grouped into multilegged sets.
 * Multiple files and formats can now be specified in cdr_custom.conf.
 * cdr_syslog has been added which allows CDRs to be written directly to syslog.
   See configs/cdr_syslog.conf.sample for more information.

Calendaring for Asterisk
------------------------
 * A new set of modules were added supporing calendar integration with Asterisk.
   Dialplan functions for reading from and writing to calendars are included,
   as well as the ability to execute dialplan logic upon calendar event notifications.
   iCalendar, CalDAV, and Exchange Server calendars are supported (Exchange support
   only tested on Exchange Server 2003 with no support for forms-based authentication).

Multicast RTP Support
---------------------
 * A new RTP engine and channel driver have been added which supports Multicast RTP.
   The channel driver can be used with the Page application to perform multicast RTP
   paging. The dial string format is: MulticastRTP/<type>/<destination>/<control address>
   Type can be either basic or linksys.
   Destination is the IP address and port for the RTP packets.
   Control address is specific to the linksys type and is used for sending the control
   packets unique to them.

Security Events Framework
-------------------------
 * Asterisk has a new C API for reporting security events.  The module res_security_log
   sends these events to the "security" logger level.  Currently, AMI is the only
   Asterisk component that reports security events.  However, SIP support will be
   coming soon.  For more information on the security events framework, see the
   "Security Events" chapter of the included documentation - doc/tex/asterisk.pdf.

Miscellaneous
-------------
 * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
   XMPP text messages to the remote JID.
